1/14/14 make RatioNode responsible for its own positioning
1/14/14 expand touchArea for picker in 'Custom' pH meter
1/14/14 fix: show 'Solutions' pH meter pointer only if meter is expanded
1/14/14 add option.emptyWhenSoluteChanges to Solution, needed for 'Custom' screen where a new custom solute is created as the pH changes
1/14/14 make Solute immutable, change pH of 'custom' solution by creating new Solute instances when the pH changes
1/14/14 bug fix in BasicsPHMeterNode, 'enabled' fill was null
1/14/14 factor out PHScaleColors.PANEL_FILL, color for all panels and expand/collapse bars
1/13/14 integrate NumberPicker into CustomPHMeterNode
1/13/14 ditch ExpandCollapseBar in CustomMeterNode, implement something specific to what's needed
1/13/14 ditch ExpandCollapseBar in SolutionsMeterNode, implement something specific to what's needed
1/13/14 change requests for graphs
1/13/14 use light gray for pH meters and expand/collapse bars, adjust colors and strokes
1/13/14 Solutions: move units AB-switch into expand/collapse bar
1/13/14 Solutions: move expand/collapse bar into SolutionsGraphNode
1/9/14 Custom: add expand/collapse feature to pH meter
1/9/14 generalize ExpandCollapseBar so that it title can be any scenery.Node
1/9/14 move expand/collapse bar instance into SolutionsPHMeterNode
1/9/14 change interface to ExpandCollapseBar
1/9/14 add expand/collapse button to SolutionsPHMeterNode
1/9/14 move colors into pH meters, since they are no longer shared across screens
1/9/14 merge PHValueNode into SolutionsPHMeter, since it will now have it's own (very different) way of working
1/9/14 create CustomPHMeterNode, since 'Custom' screen will now have it's own (very different) pH meter
1/9/14 move code for displaying pH value into BasicsPHMeterNode, since it no longer shares design with the other screens
1/8/14 use toExponential instead of toPrecision in PHUtils.toTimesTenString
# 1.0.0-dev.3 1/8/14
1/8/14 show graph guides only in dev mode